--- a/templates/hosts.j2
+++ b/templates/hosts.j2
@@ -1,19 +1,13 @@
 127.0.0.1	                                localhost
 
-{{ hostvars['neuron-mail'].ip_address }}        neuron-mail neuron-mail.neuronpointer.net
 
-{{ hostvars['gateway'].ip_address }}            gateway ap gateway.neuronpointer.net ap.neuronpointer.net
-{{ hostvars['mawg'].ip_address }}               mawg mawg.neuronpointer.net
-{{ hostvars['meliora'].ip_address }}            meliora remote printer meliora.neuronpointer.net remote.neuronpointer.net printer.neuronpointer.net
-{{ hostvars['neuron'].ip_address }}             neuron ntp wiki public neuronpointer.net neuron.neuronpointer.net ntp.neuronpointer.net wiki.neuronpointer.net public.neuronpointer.net
-{{ hostvars['synapse'].ip_address }}            synapse kerberos smokeping nagios synapse.neuronpointer.net kerberos.neuronpointer.net smokeping.neuronpointer.net nagios.neuronpointer.net
-{{ hostvars['rudolph'].ip_address }}            rudolph rudolph.neuronpointer.net
-{{ hostvars['wii'].ip_address }}                wii wii.neuronpointer.net
-{{ hostvars['peekaboo'].ip_address }}           peekaboo peekaboo.neuronpointer.net     # Dalton
-{{ hostvars['no'].ip_address }}                 no no.neuronpointer.net                 # Tomas
-{{ hostvars['files'].ip_address }}              files transmission files.neuronpointer.net transmission.neuronpointer.net
-{{ hostvars['spy'].ip_address }}                spy spy.neuronpointer.net
-{{ hostvars['xbox'].ip_address }}               xbox xbox.neuronpointer.net
+
+{% for h in groups['internal-dns-targets'] %}
+{% if hostvars[h].ip_address is defined %}
+{{ hostvars[h].ip_address }}        {{ h }} {{ h }}.neuronpointer.net {% if hostvars[h].aliases is defined %}{% for a in hostvars[h].aliases %} {{ a }} {{ a }}.neuronpointer.net{% endfor %}{% endif %}
+{% endif %}
+{% endfor %}
+
 
 ::1                                             localhost ip6-localhost ip6-loopback
 
