--- a/templates/conf/dnsmasq.conf.j2
+++ b/templates/conf/dnsmasq.conf.j2
@@ -2,6 +2,6 @@ domain-needed
 bogus-priv
 interface=eth0
 no-dhcp-interface=eth0
-local=/neuron-pointer.no-ip.org/
-domain=neuron-pointer.no-ip.org
+local=/{{ domain }}/
+domain={{ domain }}
 #address=/.neuronpointer.net/neuronpointer.net/192.168.11.54
