Put stubby in front of dnsmasq.  Working toward DNS over TLS availability, to accomodate Android's bad decisions.

--- a/templates/conf/dnsmasq.conf.j2
+++ b/templates/conf/dnsmasq.conf.j2
@@ -1,7 +1,8 @@
 domain-needed
 bogus-priv
-interface=eth0
-no-dhcp-interface=eth0
+interface=lo
+no-dhcp-interface=lo
+bind-interfaces
 local=/{{ domain }}/
 domain={{ domain }}
 #address=/.neuronpointer.net/neuronpointer.net/192.168.11.54
