--- a/templates/conf/dnsmasq.conf.j2
+++ b/templates/conf/dnsmasq.conf.j2
@@ -1,8 +1,8 @@
 domain-needed
 bogus-priv
-interface=lo
-no-dhcp-interface=lo
-bind-interfaces
+interface=eth0
+no-dhcp-interface=eth0
+#bind-interfaces
 local=/{{ domain }}/
 domain={{ domain }}
 #address=/.neuronpointer.net/neuronpointer.net/192.168.11.54
