--- a/templates/conf/dns-over-tls.conf.j2
+++ b/templates/conf/dns-over-tls.conf.j2
@@ -7,8 +7,8 @@ stream {
   }
 
 
-  ssl_certificate /etc/nginx/{{ inventory_hostname }}.crt;
-  ssl_certificate_key /etc/nginx/{{ inventory_hostname }}.key;
+  ssl_certificate /etc/ssl/certs/{{ inventory_hostname }}.pem;
+  ssl_certificate_key /etc/ssl/private/{{ inventory_hostname }}.pem;
 
   ssl_session_timeout             1d;
   ssl_session_tickets             off;
