--- a/templates/conf/dnsmasq.conf.j2
+++ b/templates/conf/dnsmasq.conf.j2
@@ -6,5 +6,9 @@ no-dhcp-interface=eth0
 local=/{{ domain }}/
 domain={{ domain }}
 #address=/.neuronpointer.net/neuronpointer.net/192.168.11.54
-server=8.8.8.8
-server=8.8.4.4
+# dns.google
+#server=8.8.8.8
+#server=8.8.4.4
+# dns.adguard.com
+server=94.140.15.15
+server=94.140.14.14
